--- a/HTML5_intro_to_CSS/Css/styles.css
+++ b/HTML5_intro_to_CSS/Css/styles.css
@@ -1,7 +1,8 @@
-body{
-    background-color:  #66412b ;
+body {
+    background-color: #66412b;
 }
-#container{
+
+#container {
     background-color: rgba(112, 177, 112, 0.616);
     width: 1200px;
     margin: 20px auto;
@@ -11,27 +12,31 @@ body{
     padding: 20px;
 }
 
-img{
+img {
     display: block;
     margin: 0 auto;
-    width: 1000px;
+    width: 80%; 
+    max-width: 1000px;
+    height: auto; 
 }
 
-nav{
+nav {
     text-align: center;
     margin: 20px 0;
 }
-nav a{
-    font size: 24px;
+
+nav a {
+    font-size: 24px;
     color: black;
     margin: 0 20px;
     font-weight: bold;
 }
 
-nav a:hover{
+nav a:hover {
     text-decoration: none;
+    color: #ffcc00; 
 }
 
-h1, h2, h3{
+h1, h2, h3 {
     text-align: center;
 }
